# meal-voting

./: package-lock.json  package.json  readme.md  schema_dump.json
client/: .env  .gitignore  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  linera-client.ts  linera-state-adapter.ts  state.ts.bak
client/src/pages/: Create.tsx  Join.tsx
linera/: linera-proxy.js  package-lock.json  package.json  verify-e2e.js
linera/meal_voting/: .gitignore  Cargo.toml  Dockerfile
linera/meal_voting/src/: contract.rs  lib.rs  service.rs  state.rs
server/src/polls/: polls.repository.ts
