[package]
name = "meal-voting"
version = "0.1.0"
authors = ["Kyler"]
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = "=7.0.17"
async-graphql-parser = "=7.0.17"
linera-sdk = "0.15.8"
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "meal_voting_contract"
path = "src/contract.rs"

[[bin]]
name = "meal_voting_service"
path = "src/service.rs"
